Create e2e tests
